--- a/portfolio/styles/restaurantStyles.css
+++ b/portfolio/styles/restaurantStyles.css
@@ -1,9 +1,13 @@
 
 /* header and footer css */
-header, footer{
+header, footer {
   background-color: #e0fbf6;
   font-family: roboto;
   padding: 10px;
+}
+
+.jumbotron {
+  background-color: #e0fbf6;
 }
 header div h1 {
   font-weight: bold;
@@ -21,14 +25,14 @@ header div p {
 }
 
 hr {
-  border-top: 2px dashed black;
+  border-top: 2px solid black;
   margin: 3px;
 }
 
 footer div p {
-  font-size: 14px;
-  margin: auto 0;
-  padding: 0px;
+  font-size: 16px;
+  margin: 10px;
+  text-align: center;
 }
 
 .descriptionSection {
@@ -41,18 +45,6 @@ body {
 
 
 /* nav bar css */
-
-.navContainer {
-  text-align: center;
-  background-color: #9dd9f0;
-}
-
-.col-sm a {
-  font-size: 22px;
-  display: block;
-  padding: 12px 0;
-  color: white;
-}
 
 a:hover {
   font-weight: bold;
